--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "next": "^15.0.3",
     "nodemailer": "^6.9.16",
     "react": "^18.3.1",
